Repository completed