@@ -11,6 +11,8 @@ import buem.pro.summerschool.model.Item;
 import org.springframework.stereotype.Repository;
 
 import java.time.LocalDateTime;
+import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.List;
 import java.util.UUID;
 
@@ -18,27 +20,34 @@ import java.util.UUID;
 public class ItemFakeRepository {
 
     private LocalDateTime now = LocalDateTime.now();
-    private List<Item> items = List.of(
+    private List<Item> items = new ArrayList<>(
+            Arrays.asList(
             new Item("1","item1"," desc1", now, now),
             new Item("2","item2"," desc2", now, now),
             new Item("3","item3"," desc3", now, now),
             new Item("4","item4"," desc4", now, now)
-    );
+    ));
 
     public List<Item> findAll(){
         return this.items;
     }
 
-
     public Item findById(String id) {
-        return null;
+        return this.items.stream().filter(item -> item.getId().equals(id))
+                .findFirst().orElse(null);
     }
 
     public Item update(Item item) {
-        return  null;
+        this.deleteById(item.getId());
+        item.setUpdatedAt(LocalDateTime.now());
+        this.items.add(item);
+        return  item;
     }
 
     public void deleteById(String id) {
+        Item item = this.findById(id);
+        int index = items.indexOf(item);
+        this.items.remove(index);
 
     }
 
@@ -46,6 +55,6 @@ public class ItemFakeRepository {
         item.setId(UUID.randomUUID().toString());
         item.setCreatedAt(LocalDateTime.now());
         this.items.add(item);
-        return null;
+        return item;
     }
 }
